[package]
name = "distributed_queue"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
    "serde"
]
